# HLV-EV-Battery-Enhancement-Software

./: .gitignore  CMakeLists.txt  Makefile  README.md  hlv_advanced_features.hpp  hlv_battery_core.hpp  hlv_bms_middleware.hpp  hlv_bms_middleware_v2.hpp  test_wnn.cpp  torque_enhancement.hpp
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  basic_integration  benchmark_multicell  benchmark_update  cmake_install.cmake  hlv_battery-config.cmake  test_advanced  test_core  test_middleware
benchmarks/: benchmark_multicell.cpp  benchmark_update.cpp
cmake/: hlv_battery-config.cmake.in
config/: install_policy.json  safety_thresholds.json  update_source.json  vehicle_profiles.json  vehicle_status.json
docs/: ARCHITECTURE.md  DIAGNOSTICS.md  INSTALL.md  REST_API.md  REST_API_IMPLEMENTATION_SUMMARY.md  SAFETY.md  architecture_overview.md  oem_can_mapping.md  oem_quick_start.md  regen_braking_overview.md  simulation_observations.md
examples/: basic_integration.cpp  closed_loop_regen_charging.cpp  multi_cell_pack.cpp  multicell_pack_loop.cpp  query_api.sh  regen_braking_loop.cpp  rest_api_client.cpp  rest_api_client.py  rest_api_server.cpp  simple_bms_loop.cpp
examples/examples/: multi_cell_pack.cpp
hlv_core/python/: hlv_enhancer.py
hlv_core/python_fallback/: hlv_enhancer_fallback.py
hlv_core/src/: hlv_enhancer.cpp  hlv_pybind11_wrapper.cpp
include/: hlv_advanced_features.hpp  hlv_battery_core.hpp  hlv_battery_enhancement.hpp  hlv_bms_interfaces.hpp  hlv_bms_middleware.hpp  hlv_bms_middleware_v2.hpp  hlv_energy_recovery_coordinator_v1.hpp  hlv_energy_stack.hpp  hlv_energy_telemetry.hpp  hlv_regen_braking_manager_v1.hpp  hlv_rest_api.hpp  hlv_rest_api_server.hpp  hlv_wnn_telemetry_bridge.hpp  torque_enhancement.hpp  wnn_payload_modulator.hpp
include/battery_feen_adapter/: battery_feen_adapter.hpp
scripts/: battery_health.sh  compatibility.sh  diagnostics.py  firmware_detect.sh  rollback.sh  update.py
src/: hlv_bms_hardware_adapter.hpp
tests/: test_advanced.cpp  test_core.cpp  test_feen_integration.cpp  test_hardened_pipeline.py  test_middleware.cpp
